--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.21.4",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
