--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
